--- a/cyclope/templates/cyclope/themes/frecuency/base.html
+++ b/cyclope/templates/cyclope/themes/frecuency/base.html
@@ -18,10 +18,7 @@ Si modificas no borres estas lineas :)
     <title>{% block title %}{%if title %}{{title}} | {%endif%}{{ CYCLOPE_SITE_SETTINGS.global_title }}{%endblock%}</title>
     <meta name="Keywords" content="{{ CYCLOPE_SITE_SETTINGS.keywords }}" />
     <meta name="Description" content="{{ CYCLOPE_SITE_SETTINGS.description }}" />
-    <!--
-        TODO(nicoechaniz): implement RSS
-        <link href="/rss.php" title="RSS" type="application/rss+xml" rel="alternate" /> -->
-
+    <link href="/rss" title="RSS" type="application/rss+xml" rel="alternate" />
     <link href="{{ CYCLOPE_THEME_MEDIA_URL }}css/style.css" rel="stylesheet" type="text/css" media="screen"/>
     <link href="{{ CYCLOPE_STATIC_URL }}js/lightbox/css/jquery.lightbox-0.5.css" rel="stylesheet" type="text/css" media="screen"/>
     <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery-1.5.1.min.js"></script>
