--- a/cyclope/templates/cyclope/themes/newflash/base.html
+++ b/cyclope/templates/cyclope/themes/newflash/base.html
@@ -64,10 +64,13 @@ MEDIANERA
 ------------------------------------------------------------------------------------------------->
       <div id="medianera">
 
+        {% block page_content %} {% endblock %}
+        
+
 <!-------------------------------------------------------------------------------------------------
 WATER
 ------------------------------------------------------------------------------------------------->
-        <div class="grid_5" >
+        <div class="grid_5 omega" >
 
           {% region 'water' %}
          
@@ -93,8 +96,6 @@ WATER
 
         </div>
         <!-- /water -->
-
-        {% block page_content %} {% endblock %}
       </div>
       <!-- /medianera -->
 
