Add CSS/HTML Curiouslygreen Theme

--- a/cyclope/templates/cyclope/themes/curiouslygreen/5_elements.html
+++ b/cyclope/templates/cyclope/themes/curiouslygreen/5_elements.html
@@ -6,7 +6,7 @@
 
 {% block page_content %}
 <div class="grid_14">
-<div id="fire">
+<div id="fire" class="main">
     {% region 'before_fire' %}
     {% block content %}{% endblock %}
     {% region 'after_fire' %}
