--- a/cyclope/templates/cyclope/themes/curiouslygreen/4_elements.html
+++ b/cyclope/templates/cyclope/themes/curiouslygreen/4_elements.html
@@ -6,7 +6,7 @@
 
 {% block page_content %}
 <div class="grid_19">
-<div id="fire">
+<div id="fire" class="inner">
   {% region 'before_fire' %}
   <div class="content_fire">
   {% block content %} {% endblock %}
