Add CSS/HTML Nonzeroblue Theme

--- a/cyclope/templates/cyclope/themes/nonzeroblue/5_elements.html
+++ b/cyclope/templates/cyclope/themes/nonzeroblue/5_elements.html
@@ -5,15 +5,15 @@
 {% block body_class %}5_elements{% endblock %}
 
 {% block page_content %}
-<div class="grid_14">
-<div id="fire">
+<div class="grid_12">
+<div id="fire" class="main">
     {% region 'before_fire' %}
     {% block content %}{% endblock %}
     {% region 'after_fire' %}
 </div>
 </div>
 
-<div class="grid_5">
+<div class="grid_7">
   <div class="content">
     {% region 'love'%}
   </div>
