Improvements Neutrona Theme

--- a/cyclope/media/themes/curiouslygreen/css/style.css
+++ b/cyclope/media/themes/curiouslygreen/css/style.css
@@ -1,5 +1,5 @@
 /*
-# Cyclope 3 Workflow Desing
+# Cyclope 3 Workflow Design
 # Theme: Curiouslygreen 
 # Layout: 5 Elements
 # 960 Grid System Based www.960.gs
