--- a/cyclope/templates/cyclope/themes/neutrona/main.html
+++ b/cyclope/templates/cyclope/themes/neutrona/main.html
@@ -2,7 +2,7 @@
 
 {% load layout %}
 
-{% block body_class %}5_elements{% endblock %}
+{% block body_class %}main{% endblock %}
 
 {% block page_content %}
 <div class="grid_14">
