--- a/cyclope/templates/cyclope/themes/neutrona/404.html
+++ b/cyclope/templates/cyclope/themes/neutrona/404.html
@@ -1,16 +1,18 @@
+{% extends CYCLOPE_THEME_BASE_TEMPLATE %}
+
 {% load i18n %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{% trans "Error 404 (Not Found)" %}</title>
-  </head>
-  <body>
-    <p>
-      <b>{% trans "Error 404" %}</b>
-    </p>
+{% load layout %}
+
+{% block title %}{% trans "Error 404 (Not Found)" %}{%endblock%}
+
+{% block body_class %}main{% endblock %}
+
+{% block page_content %}
+    {% block content %}
+    <p><b>{% trans "Error 404" %}</b></p>
     <p>
       {% trans "The requested URL was not found on this server." %}
     </p>
-  </body>
-</html>
+    {% endblock %}
+
+{% endblock %}
