some fixed html templates (sitemap/contact/search) & clean DB

--- a/cyclope/templates/cyclope/site_map.html
+++ b/cyclope/templates/cyclope/site_map.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div id="map" class="content-view site map site-map">
-<h6 class="hiper-titles">{% trans 'Site map' %}</h6>
+<h2 class="title">{% trans 'Site map' %}</h2>
   <div class="menus-map">
     <ul>
       {{ menus|unordered_list }}
