--- a/cyclope/templates/search/search.html
+++ b/cyclope/templates/search/search.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div id='advanced_search' class='user_input'>
-    <h6 class="hiper-titles">{% trans "Advanced search" %}</h6>
+    <h2 class="title">{% trans "Advanced search" %}</h2>
 
     <form method="get" action=".">
         {{ form }}
