--- a/cyclope/media/themes/neutrona/css/style.css
+++ b/cyclope/media/themes/neutrona/css/style.css
@@ -222,7 +222,7 @@ LOVE
 #love .pagination  {font-size:0.65em;text-align:center;padding:3px;background:#333;color:#eee;}
 #love .pagination a {color:#fff;text-decoration:underline;}
 #love .author {font-size:0.8em;font-weight:700;margin:10px 0 0;color:#666;padding:0 0 0 10px;}
-#love .teaser {margin:0 0 10px;padding:0;overflow:auto;border-bottom:1px solid #999;}
+#love .teaser {margin:0 0 10px;padding:0 0 5px 0;overflow:auto;border-bottom:1px dotted #999;}
 #love .teaser .title {margin:0 0 10px 0;color:#000;position:relative;overflow:auto;font-size:.95em;padding:7px 0 0;border-bottom:none;border-radius:6px;-webkit-border-radius:6px;-moz-border-radius:6px;}
 #love .teaser .title a {text-decoration:none;color:inherit;}
 #love .teaser .title a:hover {text-decoration:underline;color:#000;}  
@@ -387,7 +387,7 @@ TEASERS
 #fire .teaser li {margin:0 0 0 5px;padding:0 0 3px;}
 #fire .teaser_list, #fire .collection_all_items_teaser_list {margin:0 0 10px;border-bottom:3px solid #ccc;padding:0 0 10px;}
 #fire div.collection_teaser {overflow:auto;background:#eee;display:block;margin:-20px 0 20px;padding:10px;border-bottom:1px solid #666;}
-#fire .staticpage-teaser {border-bottom:3px solid #ccc;padding:0 0 10px;margin:0 0 10px;}
+#fire .staticpage-teaser {padding:0 0 10px;margin:0 0 10px;}
 #fire .staticpage-teaser ul li h2 {font-size:.9em;margin:0 0 10px;}
 #fire .staticpage-teaser ul  {list-style:square;margin:0 15px;}
 #fire .list_as_forum {border-bottom:3px solid #ccc;margin:0 0 10px;}    
@@ -603,11 +603,11 @@ CONTACT
 -----------------------------------------------------------------------------------------------*/
 #contact {}
 #contact form {text-align:left;padding:0;margin:0;}
-#contact p {margin:0;padding:0 20px 0 0;float:left;}
+#contact p {margin:0;padding:0 20px 0 0;}
 #contact input {width:245px;padding:4px;margin:0 0 5px;color:#333;display: block;}
 #contact .required {border:1px solid #999;}
 #id_captcha_1 {border:1px solid #999;} 
-#contact input.submit {color:#000;clear: both;margin:30px 0 0;}
+#contact input.submit {color:#000;clear: both;margin:30px 0 0;width:180px !important;}
 #contact label {margin:0;padding:5px 0 0;display:block;font-size:0.8em;font-weight:400;width:265px;}
 #contact textarea {width:530px;border:1px solid #999; padding:5px; margin-bottom:20px;}
 #id_cc_myself {display:inline;}
@@ -615,11 +615,11 @@ CONTACT
 /*-----------------------------------------------------------------------------------------------
 MAP
 -----------------------------------------------------------------------------------------------*/
-#map {}
-#map ul {list-style:none;margin:0 0 10px 30px;padding:0;}
-#map ul li {background: transparent url(../images/css/carpeta-abierta.png) 0% 3px no-repeat;padding:0 0 10px 15px;margin:5px 0 0 15px;font-weight:700;font-size:1em;}
-#map ul li ul {margin:10px 0 0;}
-#map li li {background: transparent url(../images/css/carpeta.png) 0% 3px no-repeat;padding:0 0 10px 15px;;margin:5px 0 0 15px;}
+#map span {margin:0;padding:0;}
+#map ul {list-style:none;margin:0 0 0 30px;padding:0;font-size:1em;}
+#map ul li {background: transparent url(../images/css/carpeta-abierta.png) 0% 3px no-repeat;padding:0 0 0 15px;margin:0 0 15px 0;font-weight:700;}
+#map ul li ul {margin:0 0 0;}
+#map li li {background: transparent url(../images/css/carpeta.png) 0% 3px no-repeat;padding:0 0 0 15px;;margin:0 0 0 0;}
 #map ul li ul li {margin:0;padding:0 0 0 15px;font-weight:400;}
 /*-----------------------------------------------------------------------------------------------
 SEARCH
@@ -630,10 +630,10 @@ SEARCH
 #advanced_search  ul li ul {margin:10px 0 0;}
 #advanced_search  li li {padding:0 0 10px 15px;;margin:5px 0 0 15px;}
 #advanced_search  ul li ul li {margin:0;padding:0 0 0 15px;font-weight:400;}
-#advanced_search form {border-bottom:6px solid #eee;}
+#advanced_search form {}
 #advanced_search label {display:block;font-size:0.9em;font-weight:700;}
 #advanced_search li label {font-weight:400;}
-#advanced_search .submit {margin:0 0 20px;}
+#advanced_search .submit {margin:0 0 20px;width:180px !important;}
 #search_results h3 {font-size:0.9em;font-weight:700;border:1px solid #ccc;background:#eee;padding:4px;text-align:center;margin:0 0 20px;}
 #id_q {margin:0 0 10px;border:1px solid #999;padding:4px;width:350px;}
 /*-----------------------------------------------------------------------------------------------
