--- a/cyclope/templates/admin/login.html
+++ b/cyclope/templates/admin/login.html
@@ -49,3 +49,5 @@ document.getElementById('id_username').focus()
 </div>
 {% endblock %}
 
+{% block footer %} <div id="footer"></div> {% endblock %}
+
