--- a/cyclope/templates/cyclope/themes/alternative/inner.html
+++ b/cyclope/templates/cyclope/themes/alternative/inner.html
@@ -2,7 +2,7 @@
 
 {% load layout%}
 
-{% block body_class %}4_elements{% endblock %}
+{% block body_class %}inner{% endblock %}
 
 {% block page_content %}
 <div class="grid_19">
