--- a/cyclope/apps/medialibrary/templates/medialibrary/document_slideshow_item.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_slideshow_item.html
@@ -1,13 +1,1 @@
-{% load i18n fb_versions cyclope_utils dbgettext_tags %}
-<div class="content-view document media slideshow">
-  {% if view_options.show_title %}
-    <h2 class="title"><a href="{% url document-detail document.slug %}">{{ document.name }}</a></h2>
-  {% endif %}
-      <div class="media-content slideshow_document"><img src="{% version media.image.path 'slideshow' %}"/></div>
-      <div class="action-content download_link"><a href="{{ document.document }}">{% trans "download file" %}</a></div>
-  {% if view_options.show_description %}
-    {% if document.description %}
-      <h3 class="summary">{{ document.description|smart_style }}</h3>
-    {% endif %}
-  {% endif %}
-</div>
+{% extends 'medialibrary/medialibrary_slideshow_base_item.html' %}
