--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_slideshow_item.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_slideshow_item.html
@@ -1,16 +1,10 @@
+{% extends 'medialibrary/medialibrary_slideshow_base_item.html' %}
 {% load i18n fb_versions cyclope_utils dbgettext_tags %}
+
 {% alias media as 'current_object' %}
 {% alias media.audio as 'media_file' %}
-<div class="content-view soundtrack media slideshow">
-  {% if view_options.show_title %}
-    <h2 class="title"><a href="{% url soundtrack-detail soundtrack.slug %}">{{ soundtrack.name }}</a></h2>
-  {% endif %}
+
+{% block content %}
   {% assign player_height '24' %}
   {% include 'medialibrary/media_player.html' %}
-  <div class="media-content slideshow_soundtrack"><img src="{% version media.image.path 'slideshow' %}"/></div>
-  {% if view_options.show_description %}
-    {% if soundtrack.description %}
-      <div class="summary">{{ soundtrack.description|smart_style }}</div>
-    {% endif %}
-  {% endif %}
-</div> 
+{% endblock content %}
