--- a/cyclope/core/collections/templates/collections/category_slideshow.html
+++ b/cyclope/core/collections/templates/collections/category_slideshow.html
@@ -1,8 +1,9 @@
 {% extends host_template %}
 
-{% load i18n cyclope_utils fb_versions %}
+{% load i18n cyclope_utils fb_versions compress %}
 
 {% block extra_head %}
+{% compress js %}
 <script type="text/javascript" src="{{ CYCLOPE_STATIC_URL }}js/jquery.jcarousel.min.js"></script>
 <script type="text/javascript">
     // jCarousel documentation http://sorgalla.com/projects/jcarousel/
@@ -37,7 +38,10 @@
       });
   });
 </script>
+{% endcompress %}
+{% compress css %}
 <link rel="stylesheet" type="text/css" href="{{ CYCLOPE_THEME_MEDIA_URL }}css/jcarousel.css" />
+{% endcompress %}
 {% endblock %}
 
 {% block content %}
